Bug 29191 - gprofng ignores --sysconfdir configuration option
Summary: gprofng ignores --sysconfdir configuration option
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gprofng (show other bugs)
Version: 2.39
: P2 normal
Target Milestone: ---
Assignee: Vladimir Mezentsev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-27 12:17 UTC by Matthias Klose
Modified: 2022-06-30 07:56 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Klose 2022-05-27 12:17:24 UTC
gprofng.rc is installed into 

  dbe_DATA = $(srcdir)/gprofng.rc

while it probably should be installed into the sysconfdir, which can be specified by the --sysconfdir option.
Comment 1 Matthias Klose 2022-05-27 12:20:13 UTC
i.e. it ends up in /usr/etc, but should be /etc when configured with --sysconfdir=/etc
Comment 2 Sourceware Commits 2022-06-29 04:37:22 UTC
The master branch has been updated by Vladimir Mezentsev <vmezents@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=6284f0aa11381a472d7f0ecac6b24b989d2c12db

commit 6284f0aa11381a472d7f0ecac6b24b989d2c12db
Author: Vladimir Mezentsev <vladimir.mezentsev@oracle.com>
Date:   Tue Jun 28 09:04:49 2022 -0700

    gprofng: use $(sysconfdir) instead $(prefix)/etc
    
    gprofng/ChangeLog
    2022-06-28  Vladimir Mezentsev  <vladimir.mezentsev@oracle.com>
    
            PR gprofng/29191
            * src/Makefile.am: Use $(sysconfdir) instead $(prefix)/etc.
            * src/Settings.cc: Likewise.
            * src/Makefile.in: Rebuild.
Comment 3 Vladimir Mezentsev 2022-06-30 07:56:48 UTC
Update status as resolved/fixed.