gprofng: use $(sysconfdir) instead $(prefix)/etc

gprofng/ChangeLog
2022-06-28  Vladimir Mezentsev  <vladimir.mezentsev@oracle.com>

	PR gprofng/29191
	* src/Makefile.am: Use $(sysconfdir) instead $(prefix)/etc.
	* src/Settings.cc: Likewise.
	* src/Makefile.in: Rebuild.